Vivado/Hardware/Zybo/Zybo.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Zybo_bsp_xllfifo_interrupt_example_1.build.log
18:28:13 **** Build of configuration Debug for project Zybo_bsp_xllfifo_interrupt_example_1 ****
make all 
'Building file: ../src/xllfifo_interrupt_example.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xllfifo_interrupt_example.o" -I../../Zybo_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xllfifo_interrupt_example.d" -MT"src/xllfifo_interrupt_example.d" -o "src/xllfifo_interrupt_example.o" "../src/xllfifo_interrupt_example.c"
../src/xllfifo_interrupt_example.c: In function 'XLlFifoInterruptExample':
../src/xllfifo_interrupt_example.c:91:33: error: 'XPAR_FABRIC_LLFIFO_0_VEC_ID' undeclared (first use in this function)
 #define FIFO_INTR_ID            XPAR_FABRIC_LLFIFO_0_VEC_ID
                                 ^
../src/xllfifo_interrupt_example.c:252:52: note: in expansion of macro 'FIFO_INTR_ID'
  Status = SetupInterruptSystem(&Intc, InstancePtr, FIFO_INTR_ID);
                                                    ^
../src/xllfifo_interrupt_example.c:91:33: note: each undeclared identifier is reported only once for each function it appears in
 #define FIFO_INTR_ID            XPAR_FABRIC_LLFIFO_0_VEC_ID
                                 ^
../src/xllfifo_interrupt_example.c:252:52: note: in expansion of macro 'FIFO_INTR_ID'
  Status = SetupInterruptSystem(&Intc, InstancePtr, FIFO_INTR_ID);
                                                    ^
make: *** [src/xllfifo_interrupt_example.o] Fehler 1

18:28:14 Build Finished (took 620ms)

